src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_To_Site_Use_Id__c</fullName>
        <label>Bill To Site Use Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_New_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand New Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collector__c</fullName>
        <label>Collector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Customer Key from TMS Tables</description>
        <externalId>true</externalId>
        <label>Customer Key</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <description>Discount factor for customer</description>
        <label>Factor</label>
        <precision>6</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight_Pay_Terms__c</fullName>
        <label>Freight Pay Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inco_Terms__c</fullName>
        <label>Inco Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Notes__c</fullName>
        <description>Notes field for inside sales team</description>
        <label>Inside Sales Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_National_Account_Rep__c</fullName>
        <description>Indicates if logged in user is national account rep</description>
        <formula>IF($User.Id =  National_Account_Rep__c, True,False)</formula>
        <label>Is National Account Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Id__c</fullName>
        <description>Location Id from TMS tables</description>
        <label>Location Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <description>Notes field for Marketing team</description>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>National_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Account Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outside_Sales_Notes__c</fullName>
        <description>Notes field for outside sales team</description>
        <label>Outside Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Party_Id__c</fullName>
        <description>Party Id from TMS tables</description>
        <label>Party Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <label>Party Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>INV 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INV 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INV 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INV 90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_VP_of_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional VP of Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Notes__c</fullName>
        <description>Notes field for site visits</description>
        <label>Site Visit Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Store_Id__c</fullName>
        <description>Store Id from TMS tables</description>
        <label>Store Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Days_Past_Due__c</fullName>
        <inlineHelpText>This field shows the number of days past due for the oldest invoice.</inlineHelpText>
        <label>Total Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Past_Due_Amount__c</fullName>
        <inlineHelpText>This field is the total amount of past due invoices outstanding.</inlineHelpText>
        <label>Total Past Due Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Aluminum__c</fullName>
        <label># of Aluminum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Booms__c</fullName>
        <label># of Booms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Invoices_Past_Due__c</fullName>
        <inlineHelpText>This field shows the number invoices that are past due.</inlineHelpText>
        <label># of Invoices Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Scissors__c</fullName>
        <label># of Scissors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Telehandlers__c</fullName>
        <label># of Telehandlers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Account_Type__c</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_National_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>National_Account_Rep__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_National_Account_Rep__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My National Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Tier_1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>National_Account_Rep__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Tier 1</value>
        </filters>
        <label>Tier 1</label>
    </listViews>
    <listViews>
        <fullName>Tier_2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>National_Account_Rep__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Tier 2</value>
        </filters>
        <label>Tier 2</label>
    </listViews>
    <listViews>
        <fullName>Tier_3</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>National_Account_Rep__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>equals</operation>
            <value>Tier 3</value>
        </filters>
        <label>Tier 3</label>
    </listViews>
    <recordTypes>
        <fullName>Branch</fullName>
        <active>true</active>
        <description>Represents a location of a customer if there is more than one location.</description>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Represents a master customer from TMS</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Party</fullName>
        <active>true</active>
        <description>Represents a Record in the Party table in Oracle TMS Database</description>
        <label>Party</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>